--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "next-auth": "^3.26.1",
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.10",
