--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "slugify": "^1.5.3"
+    "slugify": "^1.5.3",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.10",
