--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "slugify": "^1.5.3",
+    "styled-components": "^5.3.0",
     "swr": "^0.5.6"
   },
   "devDependencies": {
