--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "identity-obj-proxy": "^3.0.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.9",
     "next": "10.2.0",
@@ -24,11 +26,13 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.0.0",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "autoprefixer": "^10.2.6",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-node": "^4.1.0",
@@ -39,9 +43,16 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "postcss": "^8.3.0",
     "prettier": "^2.3.0",
     "tailwindcss": "^2.1.4",
     "typescript": "^4.2.4"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
